--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/plugin-notification": "^2.0.0-beta.5",
     "@tauri-apps/plugin-os": "^2.0.0-beta.5",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-updater": "^2.0.0-beta.5",
     "solid-js": "^1.7.8"
   },
   "devDependencies": {
